# fast_zip_decryption

./: fast-zip-decryption.py  fastzipfile.py  pyproject.toml  setup.py
.github/workflows/: test.yaml  test.yml  wheels.yaml  wheels.yml
extension/: _zipdecryptermodule.c
tests/: test_fastzipfile.py
